--- a/report/main.tex
+++ b/report/main.tex
@@ -1,5 +1,11 @@
 \documentclass{report}
 
+\usepackage[margin=2.5cm]{geometry}
+\usepackage{float}
+\usepackage{graphicx}
+\graphicspath{ {./media/} }
+
+\usepackage{textcomp}
 \usepackage{indentfirst}
 \usepackage{listings}
 \usepackage{verbatim}
@@ -13,17 +19,16 @@
     \tableofcontents
     \newpage
 
-    \section{Can you suggest why the authorities have considered Rick to be a potential suspect of uploadingthe files to PharmaLeaks?}
+    \section{Can you suggest why the authorities have considered Rick to be a potential suspect of uploading the files to PharmaLeaks?}
     \input{1.tex}
 
     \section{Do you find any traces of the PharmaLeaks files on Rick’s computers?}
     \input{2.tex}
 
-    \section{Can you find any evidence that PharmaLeaks file have indeed been uploaded from Rick’s comput-ers, and what the source of these files may have been? Establish a timeline of relevant events.}
+    \section{Can you find any evidence that PharmaLeaks file have indeed been uploaded from Rick’s computers, and what the source of these files may have been? Establish a timeline of relevant events.}
     \input{3.tex}
 
     \section{What can you tell about the identity of the person(s) responsible for leaking the files?}
     \input{4.tex}
-
 
 \end{document}
