--- a/report/2.tex
+++ b/report/2.tex
@@ -95,3 +95,17 @@ The one we are looking for is the one with timestamp 1604833201, but it isn't he
 \end{figure}
 
 Here are the files we were looking for with the expected md5. This proves that the files were in Rick's computer. 
+
+\begin{table}[H]
+    \begin{tabular}{@{}|l|l|@{}}
+        \toprule
+        File                              & MD5                              \\ \midrule
+        /home/rick/assets/backup.sh       & 9c7fbc58ab2a782ec5d84e99bd955487 \\
+        /home/rick/assets/obfuscator      & 9452d70d35d894f343faea12ed31f2d6 \\
+        /etc/profile                      & 7b654f479ad764d5f9d7df1fd7a3f190 \\
+        /home/rick/.bash\_history         & 456bef8a2670aeee43b8253a0f78b889 \\
+        /home/rick/backup\_1604831402.zip & f5bf6e88c20e392d8a44902cdcf5f63a \\
+        BcV-mCov\_internal\_report.pdf    & 8e5a62390ef3e86a40f91be4a7eff550 \\
+        xfarma-ceo-email\_annotated.pdf   & dc1abdb8679d3ca10a7f40b5b6436a35 \\ \bottomrule
+    \end{tabular}
+\end{table}
