--- a/report/main.tex
+++ b/report/main.tex
@@ -4,31 +4,30 @@
 \usepackage{float}
 \usepackage{graphicx}
 \graphicspath{ {./media/} }
-
+\usepackage{booktabs}
 \usepackage{textcomp}
 \usepackage{indentfirst}
 \usepackage{listings}
 \usepackage{verbatim}
 
-\author{\textbf{\huge{Grupo 22}}\vspace{2cm}\\Jorge Brown\\Nuno Palma\\Rodrigo Carvalho}
+\author{\textbf{\huge{Grupo 22}}\vspace{2cm}\\Jorge Brown 82416}
 
 \title{\textbf{\Huge{Deep Breach - Stage 2}}}
 
 \begin{document}
     \maketitle
-    \tableofcontents
     \newpage
 
-    \section{Can you suggest why the authorities have considered Rick to be a potential suspect of uploading the files to PharmaLeaks?}
+    \section*{Can you suggest why the authorities have considered Rick to be a potential suspect of uploading the files to PharmaLeaks?}
     \input{1.tex}
 
-    \section{Do you find any traces of the PharmaLeaks files on Rick’s computers?}
+    \section*{Do you find any traces of the PharmaLeaks files on Rick’s computers?}
     \input{2.tex}
 
-    \section{Can you find any evidence that PharmaLeaks file have indeed been uploaded from Rick’s computers, and what the source of these files may have been? Establish a timeline of relevant events.}
+    \section*{Can you find any evidence that PharmaLeaks file have indeed been uploaded from Rick’s computers, and what the source of these files may have been? Establish a timeline of relevant events.}
     \input{3.tex}
 
-    \section{What can you tell about the identity of the person(s) responsible for leaking the files?}
+    \section*{What can you tell about the identity of the person(s) responsible for leaking the files?}
     \input{4.tex}
 
 \end{document}
